--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -26,12 +26,14 @@ ins {
 img {
   vertical-align: top;
 }
-a {
-  color: #333;
-  text-decoration: none;
-}
+
 ul,
 li {
   text-decoration: none;
   list-style: none;
+}
+html,
+body {
+  height: 100%;
+  width: 100%;
 }
