feat: 用户搜索基本布局

--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -41,7 +41,9 @@ body {
 /*
  * ant样式重置
 */
-.ant-card .ant-card-body {
-  padding: 20px;
+.ant-card {
   border-radius: 4px;
+  .ant-card-body {
+    padding: 20px;
+  }
 }
