--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -47,3 +47,17 @@ body {
     padding: 20px;
   }
 }
+// 重置滚动条样式
+::-webkit-scrollbar {
+  width: 7px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background-color: #9093994d;
+  box-shadow: inset 0 0 6px #0003;
+}
+::-webkit-scrollbar-track {
+  background-color: #0000000d;
+}
