feat: 使用简易的方法处理主题问题

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -7,3 +7,7 @@ button {
   color: #333;
   font-family: Arial, Helvetica, sans-serif;
 }
+.dark {
+  color: rgba(255, 255, 255, 0.85);
+  background: #141414;
+}
