--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -10,4 +10,7 @@ button {
 .dark {
   color: rgba(255, 255, 255, 0.85);
   background: #141414;
+  * {
+    color: rgba(255, 255, 255, 0.85);
+  }
 }
