feat: add 404 page layout

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -7,6 +7,15 @@ button {
   color: #333;
   font-family: Arial, Helvetica, sans-serif;
 }
+html,
+body,
+#root,
+.App,
+.main {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
 .dark {
   color: rgba(255, 255, 255, 0.85);
   background: #141414;
